--- a/ReactTest.API/Web.config
+++ b/ReactTest.API/Web.config
@@ -9,6 +9,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    
+    <!-- Jwt Settings -->
+    <add key="JwtSecret" value="TEST" />
+    <add key="JwtAlgorithm" value="SHA256" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
