--- a/ReactTest.API/packages.config
+++ b/ReactTest.API/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="JWT" version="8.7.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor.ko" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.15.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Logging" version="6.15.0" targetFramework="net48" />
