--- a/ReactTest.Presentation/package.json
+++ b/ReactTest.Presentation/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "proxy": "https://localhost:7000",
   "dependencies": {
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
     "@mui/base": "5.0.0-alpha.59",
+    "@mui/material": "5.2.5",
     "@reduxjs/toolkit": "1.6.2",
     "@types/redux-devtools-extension": "2.13.2",
     "@types/redux-saga": "0.10.5",
