토큰쪽 작업 완료

--- a/ReactTest.API/ReactTest.API.csproj
+++ b/ReactTest.API/ReactTest.API.csproj
@@ -136,15 +136,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Libraries\Database\DbExtensions.cs" />
+    <Compile Include="Libraries\Database\DBParameterWrapper.cs" />
+    <Compile Include="Libraries\Database\Providers.cs" />
+    <Compile Include="Libraries\Database\SqlService.cs" />
     <Compile Include="Libraries\JwtClaims.cs" />
     <Compile Include="Libraries\JwtExtensions.cs" />
     <Compile Include="Libraries\JwtHelper.cs" />
     <Compile Include="Models\Auth\JwtPayload.cs" />
     <Compile Include="Models\Auth\LoginPayload.cs" />
+    <Compile Include="Models\Auth\TokenModel.cs" />
     <Compile Include="Models\CommonCodeModel.cs" />
+    <Compile Include="Models\Enums\Role.cs" />
+    <Compile Include="Models\MenuModel.cs" />
     <Compile Include="Models\Responses\AuthenticationResult.cs" />
     <Compile Include="Models\Responses\GetCommonCodeResponse.cs" />
-    <Compile Include="Models\Role.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
