--- a/ReactTest.Presentation/package.json
+++ b/ReactTest.Presentation/package.json
@@ -15,11 +15,13 @@
     "connected-react-router": "6.9.2",
     "history": "5.1.0",
     "react": "^17.0.2",
+    "react-cookie": "4.1.1",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.6",
     "react-router": "5.2.1",
     "react-router-dom": "5.2.1",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "2.13.9",
     "redux-saga": "1.1.3",
     "typesafe-actions": "5.1.0",
     "typescript": "^4.1.2",
