--- a/ReactTest.Presentation/package.json
+++ b/ReactTest.Presentation/package.json
@@ -14,6 +14,7 @@
     "axios": "0.24.0",
     "connected-react-router": "6.9.2",
     "history": "5.1.0",
+    "notistack": "2.0.3",
     "react": "^17.0.2",
     "react-cookie": "4.1.1",
     "react-dom": "^17.0.2",
