--- a/ReactTest.API/ReactTest.API.csproj
+++ b/ReactTest.API/ReactTest.API.csproj
@@ -143,14 +143,14 @@
     <Compile Include="Libraries\JwtClaims.cs" />
     <Compile Include="Libraries\JwtExtensions.cs" />
     <Compile Include="Libraries\JwtHelper.cs" />
+    <Compile Include="Models\Auth\AuthenticationResult.cs" />
     <Compile Include="Models\Auth\JwtPayload.cs" />
     <Compile Include="Models\Auth\LoginPayload.cs" />
     <Compile Include="Models\Auth\TokenModel.cs" />
     <Compile Include="Models\CommonCodeModel.cs" />
+    <Compile Include="Models\Core\GetCommonCodeResponse.cs" />
     <Compile Include="Models\Enums\Role.cs" />
     <Compile Include="Models\MenuModel.cs" />
-    <Compile Include="Models\Responses\AuthenticationResult.cs" />
-    <Compile Include="Models\Responses\GetCommonCodeResponse.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -167,6 +167,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Models\Responses" />
     <Folder Include="Services" />
   </ItemGroup>
   <ItemGroup>
