--- a/ReactTest.API/ReactTest.API.csproj
+++ b/ReactTest.API/ReactTest.API.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\CoreController.cs" />
     <Compile Include="Filters\RoleBasedAuthenticationAttribute.cs" />
+    <Compile Include="Filters\TokenAuthenticationAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
